--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-bom-ext</artifactId>
-        <version>2.3.0-b170523.1706</version>
+        <version>2.3.0-SNAPSHOT</version>
         <relativePath>boms/bom-ext/pom.xml</relativePath>
     </parent>
 
