--- a/jaxb-ri/runtime/jaxb1/pom.xml
+++ b/jaxb-ri/runtime/jaxb1/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-runtime-parent</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-b170524.1207</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
