--- a/jaxb-ri/bundles/osgi/tests/pom.xml
+++ b/jaxb-ri/bundles/osgi/tests/pom.xml
@@ -47,7 +47,7 @@ holder.
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>jaxb-osgi</artifactId>
-        <version>2.3.0-b170524.1207</version>
+        <version>2.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>tests</artifactId>
