ooops, syntax error in osgi instructions
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -275,9 +275,9 @@ holder.
                                     com.sun.xml.dtdparser;version=${dtd-parser.version},
                                     com.sun.xml.dtdparser.*;version=${dtd-parser.version},
                                     com.sun.xml.fastinfoset;version=${fastinfoset.version},
-                                    com.sun.xml.fastinfoset.sax,version=${fastinfoset.version},
-                                    com.sun.xml.fastinfoset.stax,version=${fastinfoset.version},
-                                    com.sun.xml.fastinfoset.vocab,version=${fastinfoset.version},
+                                    com.sun.xml.fastinfoset.sax;version=${fastinfoset.version},
+                                    com.sun.xml.fastinfoset.stax;version=${fastinfoset.version},
+                                    com.sun.xml.fastinfoset.vocab;version=${fastinfoset.version},
                                     com.sun.xml.txw2;version=${jaxb.osgiVersion},
                                     com.sun.xml.txw2.*;version=${jaxb.osgiVersion},
                                     com.sun.xml.xsom;version=${jaxb.osgiVersion},
