javadoc plugin version for jvnet-release profile
Signed-off-by: Roman Grigoriadi <bravehorsie@gmail.com>

--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -952,5 +952,18 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <!-- lukas: FIX-ME in java.net:parent -->
+            <id>jvnet-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
