JAXB RI modularization for JDK 9 and above

--- a/jaxb-ri/bundles/pom.xml
+++ b/jaxb-ri/bundles/pom.xml
@@ -70,4 +70,16 @@
         <module>ri</module>
         <module>osgi</module>
     </modules>
+
+    <profiles>
+      <profile>
+            <id>jdk9-setup</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <modules>
+                <module>mod</module>
+            </modules>
+      </profile>
+    </profiles>
 </project>
