--- a/jaxb-ri/bundles/ri/pom.xml
+++ b/jaxb-ri/bundles/ri/pom.xml
@@ -171,4 +171,22 @@
             </plugin>
         </plugins>
     </build>
+
+   <profiles>
+      <profile>
+          <id>jdk9-setup</id>
+          <activation>
+              <jdk>[9,)</jdk>
+          </activation>
+          <dependencies>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-mod</artifactId>
+                <version>${project.version}</version>
+                <optional>true</optional>
+            </dependency>  
+          </dependencies>
+      </profile>
+    </profiles>
+  
 </project>
