Fix jenkins job build failure

--- a/jaxb-ri/bundles/mod/pom.xml
+++ b/jaxb-ri/bundles/mod/pom.xml
@@ -96,6 +96,7 @@
 
     <properties>
         <generated.classes.dir>${project.build.directory}/classes</generated.classes.dir>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <build>
