--- a/jaxb-ri/jaxb-xjc-jdk9/pom.xml
+++ b/jaxb-ri/jaxb-xjc-jdk9/pom.xml
@@ -174,6 +174,11 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>${project.groupId}</groupId>
+                                    <artifactId>jaxb-runtime</artifactId>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
                                     <artifactId>codemodel</artifactId>
                                     <type>jar</type>
                                 </artifactItem>
