--- a/jaxb-ri/bundles/osgi/osgi/pom.xml
+++ b/jaxb-ri/bundles/osgi/osgi/pom.xml
@@ -182,7 +182,7 @@
                     <includeArtifactIds>jaxb-impl,jaxb1-impl,jaxb-jxc,jaxb-xjc,stax-ex,FastInfoset</includeArtifactIds>
                 </configuration>
                     </execution>
-                <execution>
+                 <execution>
                         <id>unpack-sources</id>
                         <phase>prepare-package</phase>
                         <goals>
@@ -191,7 +191,7 @@
                         <configuration>
                             <skip>${skipSources}</skip>
                             <artifactItems>
-                                <artifactItem>
+                               <artifactItem>
                                     <groupId>com.sun.xml.bind</groupId>
                                     <artifactId>jaxb-xjc</artifactId>
                                     <classifier>sources</classifier>
@@ -204,6 +204,7 @@
                                     <classifier>sources</classifier>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                    <excludes>module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.xml.bind</groupId>
@@ -437,7 +438,9 @@
                         <configuration>
                             <sourceFileExcludes>
                                 <sourceFileExclude>META-INF/versions/**</sourceFileExclude>
+                                <sourceFileExclude>module-info.java</sourceFileExclude>
                             </sourceFileExcludes>
+                            <includeDependencySources>false</includeDependencySources>
                             <additionalJOptions>
                                 <additionalJOption>--add-modules</additionalJOption>
                                 <additionalJOption>java.activation</additionalJOption>
