--- a/jaxb-ri/boms/bom-ext/pom.xml
+++ b/jaxb-ri/boms/bom-ext/pom.xml
@@ -63,7 +63,7 @@
     </description>
 
     <properties>
-        <dtd-parser.version>1.2</dtd-parser.version>
+        <dtd-parser.version>1.3-SNAPSHOT</dtd-parser.version>
         <ant.version>1.9.7</ant.version>
         <msv.version>2013.6.1</msv.version>
         <!-- don't forget to check if isorelax.version is valid -> used in osgi -->
