--- a/jaxb-ri/boms/bom/pom.xml
+++ b/jaxb-ri/boms/bom/pom.xml
@@ -62,9 +62,9 @@
     <properties>
         <jaxb-api.version>2.3.1-b171012.0343</jaxb-api.version>
         <jaxb-api-osgi.version>2.3</jaxb-api-osgi.version>
-        <istack.version>3.0.5</istack.version>
-        <fastinfoset.version>1.2.13</fastinfoset.version>
-        <stax-ex.version>1.7.8</stax-ex.version>
+        <istack.version>3.0.6-SNAPSHOT</istack.version>
+        <fastinfoset.version>1.2.14-SNAPSHOT</fastinfoset.version>
+        <stax-ex.version>1.7.9-SNAPSHOT</stax-ex.version>
     </properties>
 
     <dependencyManagement>
