Removed module dependency to ant and relaxngDatatype, those can now be placed on classpath instead.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/xjc/pom.xml
+++ b/jaxb-ri/xjc/pom.xml
@@ -275,6 +275,10 @@
                                     <includes>
                                         <include>module-info.java</include>
                                     </includes>
+                                    <compilerArgs>
+                                        <arg>--add-reads</arg>
+                                        <arg>com.sun.tools.xjc=antX</arg>
+                                    </compilerArgs>
                                 </configuration>
                             </execution>
                             <execution>
