--- a/jaxb-ri/xsom/pom.xml
+++ b/jaxb-ri/xsom/pom.xml
@@ -230,10 +230,15 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <additionalJOptions>
+                                <additionalparam>-Xdoclint:none</additionalparam>
+                                <additionalJOption>--add-reads</additionalJOption>
+                                <!--Dependency to relaxngDatatype, javadoc plugn doesn't put dependencies on module path yet-->
+                                <!--TODO remove after javadoc-plugin 3.0.0 is released, see https://issues.apache.org/jira/browse/MJAVADOC-498 -->
+                                <additionalJOption>com.sun.xml.xsom=ALL-UNNAMED</additionalJOption>
+                            </additionalJOptions>
                         </configuration>
                     </plugin>
                 </plugins>
