Fixed javadoc generation after removal ant module dependency form istack-tools.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -258,8 +258,12 @@
                             <additionalJOptions>
                                 <additionalJOption>--module-path</additionalJOption>
                                 <additionalJOption>${project.build.directory}/mods</additionalJOption>
+                                <additionalJOption>--add-modules</additionalJOption>
+                                <additionalJOption>ant</additionalJOption>
                                 <additionalJOption>--add-reads</additionalJOption>
                                 <additionalJOption>com.sun.tools.jxc=ant</additionalJOption>
+                                <additionalJOption>--add-reads</additionalJOption>
+                                <additionalJOption>com.sun.istack.tools=ant</additionalJOption>
                             </additionalJOptions>
                         </configuration>
                     </plugin>
