--- a/jaxb-ri/jaxb-jxc-jdk9/pom.xml
+++ b/jaxb-ri/jaxb-jxc-jdk9/pom.xml
@@ -184,6 +184,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
                 <configuration>
                     <dependenciesToScan>
                         <dependency>${project.groupId}:jaxb-jxc</dependency>
